# eoslib

./: config.env  csv_experimental_loader.py  data_plotting.py  db_filler.py  equations.py  point_dataclass.py  pyproject.toml
alembic/versions/: 06472e7f6232_added_accentric_factor_for_compounds.py  3363cd61d14e_.py
database/: crud.py  csv_experimental_loader.py  db_interface.py  models.py
eos/: equations.py
parsers/: nistlib.py
utils/: point_dataclass.py
