[project]
name = "eoslib"
version = "0.1.0"
description = ""
authors = [
    {name = "funnemonkee",email = "ghostsmans@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "thermo (>=0.4.2,<0.5.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
